--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="row g-2">
                     <div class="col-8">
-                        <input type="text" id="taskInput" class="form-control" placeholder="Enter a task">
+                        <input type="text" id="taskInput" class="form-control" placeholder="Enter task">
                     </div>
                     <div class="col-4">
                         <button id="addTaskBtn" class="btn btn-danger w-100">Enter</button>
