--- a/index.html
+++ b/index.html
@@ -24,31 +24,21 @@
             <div class="col-md-8 col-lg-6">
                 <div class="h1 text-center mb-4"><u><i>To-Do List</i></u>
                 </div>
-                <h1 id="taskCounter" class="text-center"> Total Tasks:0</h1>
+                <h1 id="taskCounter" class="text-center m-3"> Total Tasks:0</h1>
                 <div class="row g-2">
                     <div class="col-8">
-                        <input type="text" id="taskInput" class="form-control" placeholder="Enter task">
+                        <input type="text" id="taskInput" class="form-control table-bordered border-primary"
+                            placeholder="Enter task">
                     </div>
                     <div class="col-4">
-                        <button id="addTaskBtn" class="btn btn-warning w-100">Enter</button>
+                        <button id="addTaskBtn" class="btn btn-warning w-100">Enter Task</button>
                     </div>
                 </div>
                 <ul id="taskList" class="list-group mt-3"></ul>
-                <button id="clearTaskBtn" class="btn btn-dark mt-3 w-100">Clear All Tasks</button>
+                <button id="clearTaskBtn" class="btn btn-dark mt-3 w-100">Clear All
+                    Tasks</button>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
